--- a/api/vercel.json
+++ b/api/vercel.json
@@ -3,13 +3,16 @@
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": { 
+        "includeFiles": ["../package.json"]
+      }
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/index.js",
+      "src": "/api/(.*)",
+      "dest": "/api/",
       "methods": ["GET", "POST", "OPTIONS"]
     }
   ]
