--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,19 +1,11 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.ts",
-      "use": "@vercel/node",
-      "config": { 
-        "includeFiles": ["./package.json"]
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/",
-      "methods": ["GET", "POST", "OPTIONS"]
-    }
-  ]
+  "builds": [{
+    "src": "api/index.js",
+    "use": "@vercel/node"
+  }],
+  "routes": [{
+    "src": "/api/(.*)",
+    "dest": "/api"
+  }]
 }
